fix weird bg image on mobiles

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,7 +21,7 @@ body.index .intro{
 
 body.contact, body.contact-form-submitted, body.statement, body.events {
     background-image: linear-gradient(rgb(255, 255, 255), rgba(255, 255, 255, 0.52)), url("../img/environments.jpg");
-    background-attachment: fixed; /* fix image*/
+    background-attachment: fixed !important; /* fix image*/
 }
 
 .album {
